# detail_stitching

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app_test.cpp  cam  capture_stitching_mobile.cpp  capture_stitching_mobile.hpp  cmake_install.cmake  entrance.cpp  imageBasics.cbp  main.cpp  main_prj  overlapoft  retrieve  split  stitch_connector.h  takephoto.cpp
include/: aruchid_featuresfind.hpp  aruchid_get_homo.h  aruchid_pipeline.h  aruchid_printpic.h  aruchid_rotation.h  overlap.hpp
src/: Get_rotation.cpp  aruchid_featuresfind.cpp  aruchid_get_homo.cpp  aruchid_pipeline.cpp  aruchid_printpic.cpp  aruchid_rotation.cpp  backup.cpp  backup_.cpp  connector_overlap_new.cpp  opt_overlap.cpp  opt_overlap.h  overlap.cpp  overlap_optflow.cpp  retrieve.cpp
src_out/: mousetrack.cpp  opt_2.cpp  optical.cpp  optical.hpp  rotation_overlap_test.cpp  split.cpp  try_optflow.cpp
